# kdx-redeemed

./: .env.example  Cargo.toml  README.md  docker-compose.dev.yaml  nx.json  package-lock.json  package.json  tsconfig.base.json
apps/backend/: project.json
apps/backend/src/: main.ts
apps/backend/src/app/: app.controller.ts  app.module.ts
apps/client/: vite.config.ts
apps/client/src/app/: app.tsx
apps/kaspa_playground/: Cargo.toml  project.json
apps/kaspa_playground/src/: main.rs
apps/signature_verifier/: Cargo.toml  project.json
apps/signature_verifier/src/: main.rs
libs/backend-auth/: project.json
libs/backend-auth/src/: index.ts
libs/backend-auth/src/lib/: auth.controller.ts  auth.dto.ts  auth.guard.ts  auth.module.ts  auth.service.ts  auth.type.ts
libs/client-auth/: project.json
libs/client-auth/src/: index.ts
libs/client-auth/src/lib/: auth.state.ts
libs/client-kasware/: README.md  project.json  tsconfig.json
libs/client-kasware/src/: index.ts
libs/client-kasware/src/lib/: errors.ts  kasware-hook.ts  kasware.ts  types.ts  utils.ts
libs/client-kasware/src/type/: globals.d.ts  kasware.ts
libs/data-access-signature-verifier/: README.md  jest.config.ts  project.json
libs/data-access-signature-verifier/src/: index.ts
libs/data-access-signature-verifier/src/lib/: data-access-signature-verifier.module.ts  signature-verifier.service.ts
libs/data-access-wallet/: jest.config.ts  project.json
libs/data-access-wallet-auth-request/: README.md  jest.config.ts  project.json
libs/data-access-wallet-auth-request/src/: index.ts
libs/data-access-wallet-auth-request/src/lib/: data-access-wallet-auth-request.module.ts  wallet-auth-request.repository.ts
libs/data-access-wallet/src/: index.ts
libs/data-access-wallet/src/lib/: data-access-wallet.module.ts  user-wallet.service.ts
libs/libs_rust_krc_20_parser/: Cargo.toml  project.json
libs/libs_rust_krc_20_parser/src/: error.rs  krc20_parser.rs  lib.rs  model.rs
libs/prisma-client/src/: index.ts
libs/prisma-client/src/lib/: prisma-client.module.ts
libs/prisma-schema/: package-lock.json  package.json  project.json
libs/prisma-schema/prisma/: schema.prisma
libs/redis-client/: jest.config.ts  project.json
libs/redis-client/src/: index.ts
libs/redis-client/src/lib/: redis-client.module.ts  redis.service.ts
libs/shared/core/: package.json  project.json
libs/shared/core/src/: index.ts
libs/shared/core/src/lib/: auth-message.ts  kaspa-network.enum.ts
