[package]
name = "kaspa_playground"
version = "0.1.0"
edition = "2021"


[dependencies]
futures = "0.3.30"
tokio = { version = "1.40.0", features = ["full"] }
serde_json = "1.0"
serde = "1.0.209"
kaspa-rpc-core = { git = "https://github.com/kaspanet/rusty-kaspa.git", tag="v0.15.2" }
kaspa-wrpc-client = { git = "https://github.com/kaspanet/rusty-kaspa.git", tag="v0.15.2" }
kaspa-consensus-core = { git = "https://github.com/kaspanet/rusty-kaspa.git", tag="v0.15.2" }
libs_rust_krc_20_parser = {path= "../../libs/libs_rust_krc_20_parser"}

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
