[package]
name = "signature_verifier"
version = "0.1.0"
edition = "2021"


[dependencies]
kaspa-wallet-core = { git = "https://github.com/kaspanet/rusty-kaspa.git", branch = "master" }
kaspa-wallet-keys = { git = "https://github.com/kaspanet/rusty-kaspa.git", branch = "master" }
kaspa-addresses = { git = "https://github.com/kaspanet/rusty-kaspa.git", branch = "master" }
kaspa-consensus-core = { git = "https://github.com/kaspanet/rusty-kaspa.git", branch = "master" }
kaspa-consensus-client = { git = "https://github.com/kaspanet/rusty-kaspa.git", branch = "master" }
faster-hex = "^0.10.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
actix-web = "4"
actix-cors = "0.7.0"
dotenvy = "0.15.7"