[package]
name = "libs_rust_krc_20_parser"
version = "0.1.0"
edition = "2021"

[dependencies]
futures = "0.3.30"
tokio = { version = "1.40.0", features = ["full"] }
serde_json = "1.0"
serde = "1.0.209"
dotenvy = "0.15.7"
kaspa-rpc-core = { git = "https://github.com/kaspanet/rusty-kaspa.git", tag="v0.15.2" }
kaspa-hashes = { git = "https://github.com/kaspanet/rusty-kaspa.git", tag="v0.15.2"  }
kaspa-wrpc-client = { git = "https://github.com/kaspanet/rusty-kaspa.git", tag="v0.15.2"  }
kaspa-addresses = { git = "https://github.com/kaspanet/rusty-kaspa.git", tag="v0.15.2"  }
kaspa-wallet-pskt = { git = "https://github.com/kaspanet/rusty-kaspa.git", tag="v0.15.2"  }
kaspa-consensus-core = { git = "https://github.com/kaspanet/rusty-kaspa.git", tag="v0.15.2"  }
kaspa-consensus-client = { git = "https://github.com/kaspanet/rusty-kaspa.git", tag="v0.15.2"  }
kaspa-txscript = { git = "https://github.com/kaspanet/rusty-kaspa.git", tag="v0.15.2"  }
kaspa-txscript-errors = { git = "https://github.com/kaspanet/rusty-kaspa.git", tag="v0.15.2"  }
itertools = "0.13.0"
serde_with = "3.9.0"
thiserror = "1.0.63"
time = { version = "0.3.36", features = ["serde"] }
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
